--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "src/server.ts"
+    "start": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.1.7"
   }
 }
